--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "antd": "^5.25.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "sass": "^1.88.0",
